Mais movimentações do Personagem

--- a/Layouts/Level_Layout.xml
+++ b/Layouts/Level_Layout.xml
@@ -399,6 +399,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <player_direction>IDLE</player_direction>
+                    </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="Platform">
                             <properties>
@@ -410,7 +413,7 @@
                                 <max-fall-speed>1000</max-fall-speed>
                                 <double-jump>Disabled</double-jump>
                                 <jump-sustain>0</jump-sustain>
-                                <default-controls>Yes</default-controls>
+                                <default-controls>No</default-controls>
                                 <initial-state>Enabled</initial-state>
                             </properties>
                         </behavior-instance>
@@ -427,11 +430,33 @@
                         <x>32</x>
                         <y>112</y>
                         <z>0</z>
-                        <width>17</width>
+                        <width>18</width>
                         <height>24</height>
                         <depth>0</depth>
-                        <hotspotX>0.529411793</hotspotX>
+                        <hotspotX>0.555555582</hotspotX>
                         <hotspotY>1</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Sprite" uid="19">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>16</x>
+                        <y>48</y>
+                        <z>0</z>
+                        <width>12</width>
+                        <height>12</height>
+                        <depth>0</depth>
+                        <hotspotX>4.083333492</hotspotX>
+                        <hotspotY>1.25</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
